force-app/main/default/objects/L_M_D__c/L_M_D__c.object-meta.xml
<CustomObject>
    <description>Lista Mestre de Documentação</description>
    <label>L.M.D</label>
    <nameField>
        <label>Empresa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L.M.D</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>