force-app/main/default/objects/L_M_D__c/fields/Aplicao__c.field-meta.xml
<CustomField>
    <fullName>Aplicao__c</fullName>
    <label>2.Aplicação</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>