force-app/main/default/objects/L_M_D__c/fields/Aprovado_por__c.field-meta.xml
<CustomField>
    <fullName>Aprovado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovado por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>L.M.D</relationshipLabel>
    <relationshipName>L_M_D</relationshipName>
    <type>Lookup</type>
</CustomField>