force-app/main/default/objects/L_M_D__c/fields/C_digo_do_Documento__c.field-meta.xml
<CustomField>
    <fullName>C_digo_do_Documento__c</fullName>
    <label>Código do Documento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>