force-app/main/default/objects/L_M_D__c/fields/Condi_es_Gerais__c.field-meta.xml
<CustomField>
    <fullName>Condi_es_Gerais__c</fullName>
    <label>6.Condições Gerais</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>