force-app/main/default/objects/L_M_D__c/fields/Conta_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Conta_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>L.M.D</relationshipLabel>
    <relationshipName>L_M_D</relationshipName>
    <type>Lookup</type>
</CustomField>