force-app/main/default/objects/L_M_D__c/fields/Defini_es__c.field-meta.xml
<CustomField>
    <fullName>Defini_es__c</fullName>
    <label>3.Definições</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>