force-app/main/default/objects/L_M_D__c/fields/empresa__c.field-meta.xml
<CustomField>
    <fullName>empresa__c</fullName>
    <label>empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC1-GO</fullName>
            </value>
            <value>
                <fullName>ABC2-MT</fullName>
            </value>
            <value>
                <fullName>ABC3-TO</fullName>
            </value>
            <value>
                <fullName>HEALTH_SOLUTION</fullName>
            </value>
            <value>
                <fullName>HOSPCOM1</fullName>
            </value>
            <value>
                <fullName>HOSPCOM2-DF</fullName>
            </value>
            <value>
                <fullName>GDB</fullName>
            </value>
            <value>
                <fullName>GDB-GO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>