force-app/main/default/objects/L_M_D__c/fields/Equipamentos_e_Softwares__c.field-meta.xml
<CustomField>
    <fullName>Equipamentos_e_Softwares__c</fullName>
    <label>5.Equipamentos e Softwares</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>