force-app/main/default/objects/L_M_D__c/fields/Formul_rios_Anexos_e_Documentos__c.field-meta.xml
<CustomField>
    <fullName>Formul_rios_Anexos_e_Documentos__c</fullName>
    <label>7.Formulários, Anexos e Documentos</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>