force-app/main/default/objects/L_M_D__c/fields/Id_PSQ__c.field-meta.xml
<CustomField>
    <fullName>Id_PSQ__c</fullName>
    <label>Id PSQ</label>
    <type>TextArea</type>
</CustomField>