force-app/main/default/objects/L_M_D__c/fields/Natureza_da_Altera_o__c.field-meta.xml
<CustomField>
    <fullName>Natureza_da_Altera_o__c</fullName>
    <label>Natureza da Alteração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>