force-app/main/default/objects/L_M_D__c/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <label>1.Objetivo</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>