force-app/main/default/objects/L_M_D__c/fields/Procedimento__c.field-meta.xml
<CustomField>
    <fullName>Procedimento__c</fullName>
    <label>Procedimento:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POP</fullName>
            </value>
            <value>
                <fullName>PSQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>