force-app/main/default/objects/L_M_D__c/fields/Qualidade__c.field-meta.xml
<CustomField>
    <fullName>Qualidade__c</fullName>
    <label>Qualidade</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>