force-app/main/default/objects/L_M_D__c/fields/Refer_ncia__c.field-meta.xml
<CustomField>
    <fullName>Refer_ncia__c</fullName>
    <label>8.Referência</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>