force-app/main/default/objects/L_M_D__c/fields/Registros__c.field-meta.xml
<CustomField>
    <fullName>Registros__c</fullName>
    <label>9.Registros</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>