force-app/main/default/objects/L_M_D__c/fields/Responsabilidade_e_Autoridade__c.field-meta.xml
<CustomField>
    <fullName>Responsabilidade_e_Autoridade__c</fullName>
    <label>6.Responsabilidade e Autoridade</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>