force-app/main/default/objects/L_M_D__c/fields/Revisor__c.field-meta.xml
<CustomField>
    <fullName>Revisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>L_M_D1</relationshipName>
    <type>Lookup</type>
</CustomField>