force-app/main/default/objects/L_M_D__c/fields/T_tulo_do_Documento__c.field-meta.xml
<CustomField>
    <fullName>T_tulo_do_Documento__c</fullName>
    <label>Título do Documento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>